--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project-02</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
 
@@ -12,7 +31,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
         rel="stylesheet">
 
     <!-- Styles -->
@@ -99,7 +119,8 @@
                     <!-- Hero left -->
                     <div class="content-block">
                         <h1 class="heading lv1">Learn without limits and spread knowledge.</h1>
-                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates,
+                            and degrees from world-class universities and companies.</p>
                         <div class="cta-group">
                             <a href="#!" class="btn hero-cta">See Courses</a>
                             <button class="watch-video">
@@ -125,17 +146,22 @@
                 <div class="popular-top">
                     <div class="info">
                         <h2 class="heading lv2">Our popular courses</h2>
-                        <p class="desc">Build new skills with new trendy courses and shine for the next future career.</p>
+                        <p class="desc">Build new skills with new trendy courses and shine for the next future career.
+                        </p>
                     </div>
                     <div class="controls">
                         <button class="control-btn">
-                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 1L1 7L7 13" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>   
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7 1L1 7L7 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
                         </button>
                         <button class="control-btn">
-                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+                            <svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7 7L1 13" stroke="currentColor" stroke-linecap="round"
+                                    stroke-linejoin="round" />
                             </svg>
                         </button>
                     </div>
@@ -155,7 +181,9 @@
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
-                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career. Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career. Get the best course, gain knowledge and shine for your future
+                                career.</p>
                             <div class="foot">
                                 <span class="price">$120.75</span>
                                 <button class="btn book-btn">Book Now</button>
@@ -176,7 +204,8 @@
                                     <span class="value">4.5</span>
                                 </div>
                             </div>
-                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career.</p>
 
                             <div class="foot">
                                 <span class="price">$120.75</span>
@@ -198,7 +227,8 @@
                                     <span class="value"> 4.5</span>
                                 </div>
                             </div>
-                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
+                            <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine
+                                for your future career.</p>
 
                             <div class="foot">
                                 <span class="price">$120.75</span>
@@ -228,7 +258,9 @@
                         </div>
                         <div class="content">
                             <img src="./assets/icons/opne-quotes.svg" alt="" class="open-quotes">
-                            <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
 
@@ -246,7 +278,9 @@
                         </div>
                         <div class="content">
                             <img src="./assets/icons/opne-quotes.svg" alt="" class="open-quotes">
-                            <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
 
@@ -264,7 +298,9 @@
                         </div>
                         <div class="content">
                             <img src="./assets/icons/opne-quotes.svg" alt="" class="open-quotes">
-                            <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
                 </div>
@@ -276,12 +312,14 @@
             <div class="main-content">
                 <div class="body">
                     <div class="images">
-                        <img class="lower" src="./assets/img/feature-1.jpg" alt="Learner outcomes through our awesome platform" />
+                        <img class="lower" src="./assets/img/feature-1.jpg"
+                            alt="Learner outcomes through our awesome platform" />
                         <img src="./assets/img/feature-2.jpg" alt="Learner outcomes through our awesome platform" />
                     </div>
                     <div class="content">
                         <h2 class="heading lv2">Learner outcomes through our awesome platform</h2>
-                        <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+                        <p class="desc">87% of people learning for professional development report career benefits like
+                            getting a promotion, a raise, or starting a new career.</p>
                         <p class="desc">Lesson Impact Report (2022)</p>
                         <a href="#!" class="btn cta-btn">Sign Up</a>
                     </div>
@@ -293,11 +331,14 @@
             <div class="main-content">
                 <div class="body">
                     <div class="images">
-                        <img class="lower" src="./assets/img/feature-3.jpg" alt="Take the next step toward your personal and professional goals with Lesson." />
+                        <img class="lower" src="./assets/img/feature-3.jpg"
+                            alt="Take the next step toward your personal and professional goals with Lesson." />
                     </div>
                     <div class="content">
-                        <h2 class="heading lv2">Take the next step toward your personal and professional goals with Lesson.</h2>
-                        <p class="desc">Take the next step toward. Join now to receive personalized and more recommendations from the full Coursera catalog.</p>
+                        <h2 class="heading lv2">Take the next step toward your personal and professional goals with
+                            Lesson.</h2>
+                        <p class="desc">Take the next step toward. Join now to receive personalized and more
+                            recommendations from the full Coursera catalog.</p>
                         <a href="#!" class="btn cta-btn">Join Now </a>
                     </div>
                 </div>
@@ -315,7 +356,8 @@
                     <!-- Blog item 1 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-1.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-1.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -329,7 +371,8 @@
                     <!-- Blog item 2 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-2.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-2.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -343,7 +386,8 @@
                     <!-- Blog item 3 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-3.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-3.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -357,7 +401,8 @@
                     <!-- Blog item 4 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-1.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-1.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -371,7 +416,8 @@
                     <!-- Blog item 5 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-2.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-2.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -385,7 +431,8 @@
                     <!-- Blog item 6 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-3.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-3.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -398,7 +445,8 @@
                     <!-- Blog item 7 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-1.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-1.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -412,7 +460,8 @@
                     <!-- Blog item 8 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-2.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-2.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -426,7 +475,8 @@
                     <!-- Blog item 9 -->
                     <div class="item">
                         <a href="#!">
-                            <img src="./assets/img/Blog-3.jpg" alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
+                            <img src="./assets/img/Blog-3.jpg"
+                                alt="How to become a pro web designer in 2022 and get remot job?" class="thumb">
                         </a>
                         <div class="info">
                             <span class="date">21 November 2021</span>
@@ -452,7 +502,8 @@
                 <!-- Column 1 -->
                 <div class="column">
                     <img src="./assets/img/Lesson.-white.svg" alt="Lesson" class="logo">
-                    <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+                    <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot
+                        easier with us.</p>
                     <div class="socials">
                         <a href="#!">
                             <img src="./assets/icons/twitter.svg" alt="" class="icon">
